@@ -9,8 +9,10 @@ import org.mockito.Mock;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.util.ReflectionTestUtils;
+import uk.gov.hmcts.ecm.common.exceptions.DocumentManagementException;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.CaseDetails;
+import uk.gov.hmcts.et.common.model.ccd.DocumentInfo;
 import uk.gov.hmcts.et.common.model.ccd.types.ClaimantType;
 import uk.gov.hmcts.et.common.model.ccd.types.Organisation;
 import uk.gov.hmcts.et.common.model.ccd.types.RepresentedTypeC;
@@ -26,6 +28,9 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -44,6 +49,7 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.SEND_NOTIFICATION_R
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.TRIBUNAL;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.service.SendNotificationService.CASE_MANAGEMENT_ORDERS_REQUESTS;
+import static uk.gov.hmcts.ethos.replacement.docmosis.service.TornadoService.NOTIFICATION_SUMMARY_PDF;
 
 @ExtendWith(SpringExtension.class)
 class SendNotificationServiceTest {
@@ -52,6 +58,8 @@ class SendNotificationServiceTest {
     private HearingSelectionService hearingSelectionService;
     @MockBean
     private FeatureToggleService featureToggleService;
+    @Mock
+    private TornadoService tornadoService;
     private CaseData caseData;
     private CaseDetails caseDetails;
     private SendNotificationService sendNotificationService;
@@ -74,7 +82,7 @@ class SendNotificationServiceTest {
      void setUp() {
         emailService = spy(new EmailUtils());
         sendNotificationService = new SendNotificationService(hearingSelectionService,
-                emailService, featureToggleService);
+                emailService, featureToggleService, tornadoService);
         ReflectionTestUtils.setField(sendNotificationService,
                 RESPONDENT_SEND_NOTIFICATION_TEMPLATE_ID,
                 "respondentSendNotificationTemplateId");
@@ -129,7 +137,7 @@ class SendNotificationServiceTest {
     void testCreateSendNotification() {
 
         sendNotificationService.createSendNotification(caseData);
-        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().get(0).getValue();
+        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().getFirst().getValue();
 
         assertEquals("title", sendNotificationType.getSendNotificationTitle());
         assertEquals("no", sendNotificationType.getSendNotificationLetter());
@@ -159,7 +167,7 @@ class SendNotificationServiceTest {
     void testCreateSendNotificationWhenRespondentShouldBeNotified() {
         caseData.setSendNotificationSelectParties(RESPONDENT_ONLY);
         sendNotificationService.createSendNotification(caseData);
-        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().get(0).getValue();
+        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().getFirst().getValue();
         assertEquals(NOT_VIEWED_YET, sendNotificationType.getNotificationState());
     }
 
@@ -169,7 +177,7 @@ class SendNotificationServiceTest {
         caseData.setSendNotificationSelectParties(CLAIMANT_ONLY);
         caseData.setSendNotificationResponseTribunal(SEND_NOTIFICATION_RESPONSE_REQUIRED);
         sendNotificationService.createSendNotification(caseData);
-        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().get(0).getValue();
+        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().getFirst().getValue();
         assertEquals(NOT_STARTED_YET, sendNotificationType.getNotificationState());
     }
 
@@ -179,7 +187,7 @@ class SendNotificationServiceTest {
         caseData.setSendNotificationSelectParties(RESPONDENT_ONLY);
         caseData.setSendNotificationResponseTribunal(SEND_NOTIFICATION_RESPONSE_REQUIRED);
         sendNotificationService.createSendNotification(caseData);
-        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().get(0).getValue();
+        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().getFirst().getValue();
         assertEquals(NOT_VIEWED_YET, sendNotificationType.getNotificationState());
     }
 
@@ -188,7 +196,7 @@ class SendNotificationServiceTest {
         caseData.setSendNotificationSubject(List.of(CASE_MANAGEMENT_ORDERS_REQUESTS));
         caseData.setSendNotificationSelectParties(RESPONDENT_ONLY);
         sendNotificationService.createSendNotification(caseData);
-        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().get(0).getValue();
+        SendNotificationType sendNotificationType = caseData.getSendNotificationCollection().getFirst().getValue();
         assertEquals(NOT_VIEWED_YET, sendNotificationType.getNotificationState());
     }
 
@@ -412,6 +420,57 @@ class SendNotificationServiceTest {
         assertEquals("claimant", val.get("respondentNames"));
         assertEquals("2020-01-02", val.get("hearingDate"));
 
+    }
+
+    @Test
+    void testCreateNotificationSummarySuccess() throws Exception {
+        DocumentInfo expectedDocumentInfo = new DocumentInfo();
+        expectedDocumentInfo.setDescription("Notification 1 Summary");
+        expectedDocumentInfo.setMarkUp("<a href=\"http://dm-store/documents/123-456-789/binary\">Document</a>");
+        expectedDocumentInfo.setUrl("http://dm-store/documents/123-456-789/binary");
+
+        when(tornadoService.generateEventDocument(caseData, "userToken",
+                SCOTLAND_CASE_TYPE_ID, NOTIFICATION_SUMMARY_PDF))
+                .thenReturn(expectedDocumentInfo);
+        
+        DocumentInfo result = sendNotificationService.createNotificationSummary(
+                caseData, "userToken", SCOTLAND_CASE_TYPE_ID);
+        
+        verify(tornadoService, times(1)).generateEventDocument(
+                caseData, "userToken", SCOTLAND_CASE_TYPE_ID,
+                NOTIFICATION_SUMMARY_PDF);
+        assertSame(expectedDocumentInfo, result);
+        assertEquals("<a href=\"http://dm-store/documents/123-456-789/binary\">Notification 1 Summary</a>",
+                result.getMarkUp());
+    }
+
+    @Test
+    void testCreateNotificationSummaryWithMarkUpReplacement() throws Exception {
+        DocumentInfo documentInfo = new DocumentInfo();
+        documentInfo.setDescription("Notification 1 Summary");
+        documentInfo.setMarkUp("<a href=\"http://dm-store/documents/123-456-789/binary\">Document</a>");
+        
+        when(tornadoService.generateEventDocument(any(), anyString(), anyString(), anyString()))
+                .thenReturn(documentInfo);
+        
+        DocumentInfo result = sendNotificationService.createNotificationSummary(
+                caseData, "userToken", SCOTLAND_CASE_TYPE_ID);
+        
+        assertEquals("<a href=\"http://dm-store/documents/123-456-789/binary\">Notification 1 Summary</a>",
+                result.getMarkUp());
+    }
+
+    @Test
+    void testCreateNotificationSummaryThrowsDocumentManagementException() throws Exception {
+        when(tornadoService.generateEventDocument(any(), anyString(), anyString(), anyString()))
+                .thenThrow(new RuntimeException("Tornado down"));
+        
+        DocumentManagementException exception = assertThrows(DocumentManagementException.class,
+                () -> sendNotificationService.createNotificationSummary(caseData, "userToken", SCOTLAND_CASE_TYPE_ID));
+        
+        assertTrue(exception.getMessage().contains("Failed to generate document for case id: 1234"));
+        verify(tornadoService, times(1)).generateEventDocument(
+                caseData, "userToken", SCOTLAND_CASE_TYPE_ID, NOTIFICATION_SUMMARY_PDF);
     }
 
 }
